# ecommerce

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  main.py  perguntas_negocio.md  pyproject.toml
ecommerce_project/: dbt_project.yml
ecommerce_project/models/: sources.yml
ecommerce_project/models/bronze/: stg_clientes.sql  stg_preco_competidores.sql  stg_produtos.sql  stg_vendas.sql
ecommerce_project/models/gold/: schema.yml
ecommerce_project/models/gold/commercial/: fct_competitividade_precos.sql
ecommerce_project/models/gold/finance/: fct_vendas_performance.sql
ecommerce_project/models/gold/marketing/: fct_segmentacao_clientes.sql
ecommerce_project/models/gold/operations/: fct_saude_portfolio.sql
ecommerce_project/models/silver/: int_clientes.sql  int_preco_competidores.sql  int_produtos.sql  int_vendas.sql
src/: app.py  athena_to_supabase.py  upload_to_s3.py
